<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sorter</string>
    <string name="hello_world">Hello world!</string>
    <string name="default_val">0 1 2 3 4 5 6 7 8 9</string>
    <string name="sort_button_name">Sort</string>
    <string name="reset_button_name">Reset</string>
    <string name="sort_alg_name_default">Quicksort</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

</resources>
