<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/array_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sort_alg_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/default_val"
        android:textSize="@dimen/sort_array_text_size" />

    <Button
        android:id="@+id/sort_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/array_tv"
        android:layout_below="@+id/array_tv"
        android:layout_toRightOf="@+id/reset_button"
        android:onClick="sort"
        android:text="@string/sort_button_name" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/array_tv"
        android:layout_below="@+id/array_tv"
        android:onClick="reset"
        android:text="@string/reset_button_name" />

    <TextView
        android:id="@+id/sort_alg_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/sort_alg_name_default"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/sort_alg_name_size" />
        
	<LinearLayout
	    android:id="@+id/indeces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sort_button" 
        android:layout_below="@+id/reset_button" >       
        
	    <TextView
	        android:id="@+id/index0"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/zero"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <TextView
	        android:id="@+id/index1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/one"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/index2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/two"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <TextView
	        android:id="@+id/index3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/three"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/index4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/four"
	        android:textAppearance="?android:attr/textAppearanceLarge" />	    
	
	    <TextView
	        android:id="@+id/index5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/five"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/index6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/six"
	        android:textAppearance="?android:attr/textAppearanceLarge" />    
	
	    <TextView
	        android:id="@+id/index7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/seven"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/index8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/eight"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/index9"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/nine"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

    
    </LinearLayout>

</RelativeLayout>